--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,13 @@
 # Subj. :   Git ignore File
 #
 ##############################################################################
+
+# OS generated files #
+######################
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 ### EOF ###
